# mecanum-wheel-robot

./: .gitignore  AUTONOMOUS_NAVIGATION_PLAN.md  CLAUDE.md  README.md  frames_2025-08-05_16.28.47.gv  frames_2025-08-06_14.28.08.gv  frames_2025-08-11_20.55.54.gv  frames_2025-08-11_22.47.30.gv  test.urdf
docs/setup/: README.md
docs/troubleshooting/: README.md
scripts/: CALIBRATION_GUIDE.md  velocity_calibration.py
src/: calibration_diagnostic.py  param_checker.py
src/mecanum_robot_sim/: CMakeLists.txt  package.xml
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: hardware.yaml  joystick.yaml  joystick_velocity.yaml  mapping_preprocessing_view.rviz  mapping_preprocessing_view_optimized.rviz  mapping_view.rviz  nav2_params.yaml  robot_view.rviz  robot_with_zed2i.rviz  ros2_controllers.yaml  slam_params.yaml  slam_view.rviz  zed2i_robot_config.yaml  zed_depth_to_scan.yaml  zed_localization_config.yaml  zed_mapping_config.yaml  zed_mapping_robust_config.yaml  zed_navigation_config.yaml  zed_vi_slam_config.yaml
src/robot_bringup/docs/: ZED_VI_SLAM_Mapping_Guide.md
src/robot_bringup/launch/: enhanced_robot_bringup.launch.py  gazebo_sim.launch.py  gazebo_velocity_sim.launch.py  hardware_test.launch.py  joystick.launch.py  joystick_test.launch.py  joystick_velocity.launch.py  robot_bringup.launch.py  robot_description.launch.py  robot_localization.launch.py  robot_mapping.launch.py  robot_mapping_robust.launch.py  robot_navigation.launch.py  robot_slam.launch.py  robot_vi_slam.launch.py  robot_vi_slam_test.launch.py  robot_with_zed2i.launch.py  test_vi_slam_urdf.launch.py  zed_vi_slam.launch.py
src/robot_bringup/maps/: simple_room.yaml
src/robot_bringup/scripts/: manage_zed_maps.sh  save_slam_map.sh  save_zed_map.sh  simple_cloud_filter.py  test_usb_detection.py
src/robot_bringup/urdf/: yahboomcar_chassis.urdf.xacro  yahboomcar_chassis_velocity.urdf.xacro  yahboomcar_vi_slam.urdf.xacro  yahboomcar_with_zed2i.urdf.xacro
src/robot_description/: CMakeLists.txt  package.xml
src/robot_hardware/: package.xml  setup.cfg  setup.py
src/robot_hardware/robot_hardware/: motor_calibration_tool.py  yahboom_driver.py
src/robot_hardware/test/: test_serial.py
src/robot_pointcloud_preprocessing/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/robot_pointcloud_preprocessing/config/: preprocessing_params.yaml  preprocessing_view.rviz
src/robot_pointcloud_preprocessing/include/robot_pointcloud_preprocessing/: mapping_preprocessor.hpp
src/robot_pointcloud_preprocessing/launch/: mapping_preprocessing.launch.py  pointcloud_preprocessing.launch.py  robot_mapping_with_preprocessing.launch.py  robot_with_preprocessing.launch.py  test_preprocessing.launch.py
src/robot_pointcloud_preprocessing/robot_pointcloud_preprocessing/: pointcloud_preprocessor.py
src/robot_pointcloud_preprocessing/src/: mapping_preprocessor.cpp  mapping_preprocessor_node.cpp
src/robot_pointcloud_preprocessing/test/: test_flake8.py  test_pep257.py
src/robot_teleop/: package.xml  setup.py
src/robot_teleop/robot_teleop/: yahboom_joystick.py
